* i386.md (negdf2_ifs_rex64): Don't allow GPR operand.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/rtlopt-branch@58677 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -9710,9 +9710,9 @@
   "#")
 
 (define_insn "*negdf2_ifs_rex64"
-  [(set (match_operand:DF 0 "nonimmediate_operand" "=Y#fr,Y#fr,fm#Yr,r#Yf")
-	(neg:DF (match_operand:DF 1 "nonimmediate_operand" "0,Y#fr,0,0")))
-   (use (match_operand:V2DF 2 "nonimmediate_operand" "Ym,0,*Y*rm,*Y*rm"))
+  [(set (match_operand:DF 0 "nonimmediate_operand" "=Y#f,Y#f,fm#Y")
+	(neg:DF (match_operand:DF 1 "nonimmediate_operand" "0,Y#fr,0")))
+   (use (match_operand:V2DF 2 "nonimmediate_operand" "Ym,0,*Y*rm"))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && TARGET_SSE2
    && (reload_in_progress || reload_completed
@@ -21996,10 +21996,10 @@
 (define_insn "sse2_unpckhpd"
   [(set (match_operand:V2DF 0 "register_operand" "=x")
 	(vec_concat:V2DF
-	 (vec_select:V2DF (match_operand:V2DF 1 "register_operand" "0")
-			  (parallel [(const_int 1)]))
-	 (vec_select:V2DF (match_operand:V2DF 2 "register_operand" "x")
-			  (parallel [(const_int 0)]))))]
+	 (vec_select:DF (match_operand:V2DF 1 "register_operand" "0")
+			(parallel [(const_int 1)]))
+	 (vec_select:DF (match_operand:V2DF 2 "register_operand" "x")
+			(parallel [(const_int 0)]))))]
   "TARGET_SSE2"
   "unpckhpd\t{%2, %0|%0, %2}"
   [(set_attr "type" "ssecvt")
@@ -22008,10 +22008,10 @@
 (define_insn "sse2_unpcklpd"
   [(set (match_operand:V2DF 0 "register_operand" "=x")
 	(vec_concat:V2DF
-	 (vec_select:V2DF (match_operand:V2DF 1 "register_operand" "0")
-			  (parallel [(const_int 0)]))
-	 (vec_select:V2DF (match_operand:V2DF 2 "register_operand" "x")
-			  (parallel [(const_int 1)]))))]
+	 (vec_select:DF (match_operand:V2DF 1 "register_operand" "0")
+			(parallel [(const_int 0)]))
+	 (vec_select:DF (match_operand:V2DF 2 "register_operand" "x")
+			(parallel [(const_int 1)]))))]
   "TARGET_SSE2"
   "unpcklpd\t{%2, %0|%0, %2}"
   [(set_attr "type" "ssecvt")
