* i386.md (negdf2_ifs_rex64): Don't allow GPR operand.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58679 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Thu Oct 31 16:22:31 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (negdf2_ifs_rex64): Don't allow GPR operand.
+
 2002-10-30  Zack Weinberg  <zack@codesourcery.com>
 
 	* gthr.h, gthr-dce.h, gthr-posix.h, gthr-rtems.h,
