--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -9710,9 +9710,9 @@
   "#")
 
 (define_insn "*negdf2_ifs_rex64"
-  [(set (match_operand:DF 0 "nonimmediate_operand" "=Y#fr,Y#fr,fm#Yr,r#Yf")
-	(neg:DF (match_operand:DF 1 "nonimmediate_operand" "0,Y#fr,0,0")))
-   (use (match_operand:V2DF 2 "nonimmediate_operand" "Ym,0,*Y*rm,*Y*rm"))
+  [(set (match_operand:DF 0 "nonimmediate_operand" "=Y#f,Y#f,fm#Y")
+	(neg:DF (match_operand:DF 1 "nonimmediate_operand" "0,Y#fr,0")))
+   (use (match_operand:V2DF 2 "nonimmediate_operand" "Ym,0,*Y*rm"))
    (clobber (reg:CC 17))]
   "TARGET_64BIT && TARGET_SSE2
    && (reload_in_progress || reload_completed
