--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,28 @@
+2002-11-04  Geoffrey Keating  <geoffk@apple.com>
+
+	* common-1.c: New.
+	* common-1.h: New.
+	* decl-1.c: New.
+	* decl-1.h: New.
+	* decl-2.c: New.
+	* decl-2.h: New.
+	* decl-3.c: New.
+	* decl-3.h: New.
+	* decl-4.c: New.
+	* decl-4.h: New.
+	* decl-5.c: New.
+	* decl-5.h: New.
+	* global-1.c: New.
+	* global-1.h: New.
+	* inline-1.c: New.
+	* inline-1.h: New.
+	* inline-2.c: New.
+	* inline-2.h: New.
+	* static-1.c: New.
+	* static-1.h: New.
+	* static-2.c: New.
+	* static-2.h: New.
+
 2002-09-01  Geoffrey Keating  <geoffk@redhat.com>
 
 	* g++.dg/pch/pch.exp: Better handle failing testcases.
