* gthr-vxworks.h: Rewritten from scratch. 	* config/vxlib.c: New file. 	* config/t-vxworks: Add config/vxlib.c to LIB2FUNCS_EXTRA. 	* config/rs6000/t-vxworks: Add config/vxlib.c to 	LIB2FUNCS_EXTRA here too, because of clash with 	config/rs6000/t-ppccomm.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58812 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-11-04  Zack Weinberg  <zack@codesourcery.com>
+
+	* gthr-vxworks.h: Rewritten from scratch.
+	* config/vxlib.c: New file.
+	* config/t-vxworks: Add config/vxlib.c to LIB2FUNCS_EXTRA.
+	* config/rs6000/t-vxworks: Add config/vxlib.c to
+	LIB2FUNCS_EXTRA here too, because of clash with
+	config/rs6000/t-ppccomm.
+
 2002-11-03  Roger Sayle  <roger@eyesopen.com>
 
 	* real.c (real_sqrt): New function to calculate square roots.
