--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+Tue Nov  5 14:34:36 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (float_truncate SSE splitter): Ensure that operand is not
+	stack register.
+	(float SSE splitters): Reorder conditional.
+
 2002-11-04  Zack Weinberg  <zack@codesourcery.com>
 
 	* gthr-vxworks.h: Rewritten from scratch.
