--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -3980,8 +3980,9 @@
 	(float_truncate:SF
 	 (match_operand:DF 1 "nonimmediate_operand" "")))
    (clobber (match_operand 2 "" ""))]
-  "TARGET_80387 && reload_completed
-   && SSE_REG_P (operands[0])"
+  "TARGET_80387 && reload_completed && TARGET_SSE_PARTIAL_REGS
+   && SSE_REG_P (operands[0])
+   && !STACK_REG_P (operands[1])"
   [(const_int 0)]
 {
   rtx src, dest;
@@ -4730,8 +4731,8 @@
 (define_split
   [(set (match_operand:SF 0 "register_operand" "")
 	(float:SF (match_operand:SI 1 "nonimmediate_operand" "")))]
-  "TARGET_80387 && reload_completed
-   && SSE_REG_P (operands[0]) && TARGET_SSE_PARTIAL_REGS"
+  "TARGET_80387 && reload_completed && TARGET_SSE_PARTIAL_REGS
+   && SSE_REG_P (operands[0])"
   [(const_int 0)]
 {
   rtx dest;
@@ -4784,8 +4785,8 @@
 (define_split
   [(set (match_operand:SF 0 "register_operand" "")
 	(float:SF (match_operand:DI 1 "nonimmediate_operand" "")))]
-  "TARGET_80387 && reload_completed
-   && SSE_REG_P (operands[0]) && TARGET_SSE_PARTIAL_REGS"
+  "TARGET_80387 && reload_completed && TARGET_SSE_PARTIAL_REGS
+   && SSE_REG_P (operands[0])"
   [(const_int 0)]
 {
   rtx dest;
