* tree-cfg.c (create_block_annotations): New local function. 	(create_bb_ann): Remove.  Update all users. 	(parent_array): New local variable. 	(build_tree_cfg): Initialize it. 	Call create_block_annotations. 	(create_bb): Call alloc_block instead of ggc_alloc to allocate 	memory for basic blocks. 	Don't call set_parent_block. 	Grow array parent_array. 	(dump_tree_cfg): Change meaning of second argument.  Make it accept 	any of the TDF_* flags defined in tree.h. 	(delete_tree_cfg): Call free_aux_for_blocks. 	Free array parent_array. 	* tree-flow-inline.h (get_filename): New function. 	(is_exec_stmt): return false if T is error_mark_node. 	* tree-flow.h (struct var_ref_d): Mark alias_imm_rdefs field for 	garbage collection. 	(get_filename): Declare. 	(struct bb_ann_d): Rename from bb_ann_def. 	Remove garbage collection markers. 	(referenced_vars): Mark for garbage collection. 	(global_var): Likewise. 	(create_bb_ann): Remove. 	* tree-optimize.c (optimize_function_tree): Remove CFG and SSA 	after debugging dumps.
	* diagnostic.h (print_generic_stmt): Rename from print_generic_tree.
	Update all users.
	(print_generic_expr): Rename from print_generic_node.  Update all
	users.
	(PPF_BRIEF): Remove.  Update all users.
	(PPF_BLOCK): Remove.  Update all users.
	(PPF_LINENO): Remove.  Update all users.
	(PPF_IS_STMT): Remove.  Update all users.
	* flags.h (flag_dump_tree_all_ssa): Remove.  Update all users.
	* toplev.c (f_options): Remove entry for -fdump-tree-all-ssa.
	Update all users.
	* tree-dump.c (dump_enable_all): Rename from dump_enable_all_ssa.
	Update all users.
	(dump_files): Add entry for -fdump-tree-all.
	(dump_option_value_info): Remove entries for TDF_REFS and
	TDF_RDEFS.
	Add entry for TDF_BLOCK.
	(dump_switch_p): If -fdump-tree-all was given, call dump_enable_all.
	* tree-pretty-print.c (PPF_BRIEF): Remove.  Update all users.
	(PPF_BLOCK): Remove.  Update all users.
	(PPF_LINENO): Remove.  Update all users.
	(PPF_IS_STMT): Remove.  Update all users.
	(dumpin

--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -3232,19 +3232,19 @@ changes according to the environment and source file. Its primary use
 is for tying up a dump file with a debug environment.
 @item slim
 Inhibit dumping of members of a scope or body of a function merely
-because that scope has been reached. Only dump such items when they
-are directly reachable by some other path.
-@item refs
-Print the list of references made to each variable in the program.
-@item rdefs
-Print the list of reaching definitions for each variable used in the program.
+because that scope has been reached.  Only dump such items when they
+are directly reachable by some other path.  When dumping pretty-printed
+trees, this option inhibits dumping the bodies of control structures.
 @item raw
-Print a raw representation of the tree.
+Print a raw representation of the tree.  By default, trees are
+pretty-printed into a C-like representation.
 @item details
 Enable more detailed dumps (not honored by every dump option).
 @item stats
 Enable dumping various statistics about the pass (not honored by every dump
 option).
+@item block
+Enable showing basic block boundaries (disabled in raw dumps).
 @item all
 Turn on all options.
 @end table
@@ -3295,11 +3295,11 @@ by appending @file{.pre} to the source file name.
 @opindex fdump-tree-dce
 Dump each function before and after DCE.  The file name is made by appending
 @file{.dce} to the source file name.
-@end table
 
-@item -fdump-tree-all-ssa @r{(C and C++ only)}
-@opindex fdump-tree-all-ssa @r{(C and C++ only)}
-Enable all SSA-related dumps described above.
+@item all
+@opindex fdump-tree-all
+Enable all the available tree dumps with the flags provided in this option.
+@end table
 
 @item -fsched-verbose=@var{n}
 @opindex fsched-verbose
