--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -9590,7 +9590,7 @@
 
 (define_split
   [(set (match_operand:SF 0 "register_operand" "")
-	(neg:SF (match_operand:SF 1 "register_operand" "")))
+	(neg:SF (match_operand:SF 1 "nonimmediate_operand" "")))
    (use (match_operand:V4SF 2 "nonimmediate_operand" ""))
    (clobber (reg:CC 17))]
   "reload_completed && SSE_REG_P (operands[0])"
@@ -10061,31 +10061,21 @@
 
 (define_split
   [(set (match_operand:SF 0 "register_operand" "")
-	(abs:SF (match_dup 0)))
-   (use (match_operand:V4SF 1 "nonmemory_operand" ""))
+	(abs:SF (match_operand:SF 1 "nonimmediate_operand" "")))
+   (use (match_operand:V4SF 2 "nonimmediate_operand" ""))
    (clobber (reg:CC 17))]
   "reload_completed && SSE_REG_P (operands[0])"
   [(set (subreg:TI (match_dup 0) 0)
-	(and:TI (subreg:TI (match_dup 0) 0)
-		(subreg:TI (match_dup 1) 0)))]
+	(and:TI (subreg:TI (match_dup 1) 0)
+		(subreg:TI (match_dup 2) 0)))]
 {
-  operands[0] = gen_rtx_SUBREG (V4SFmode, operands[0], 0);
-})
-
-(define_split
-  [(set (match_operand:SF 0 "register_operand" "")
-	(abs:SF (match_operand:SF 1 "register_operand" "")))
-   (use (match_operand:V4SF 2 "register_operand" ""))
-   (clobber (reg:CC 17))]
-  "reload_completed && SSE_REG_P (operands[0])"
-  [(set (subreg:TI (match_dup 0) 0)
-	(and:TI (subreg:TI (match_dup 0) 0)
-		(subreg:TI (match_dup 1) 0)))]
-{
-  /* Operand2 should match operand0, as the opposite case is handled above.  */
-  if (REGNO (operands[2]) != REGNO (operands[0]))
-    abort ();
-  operands[0] = gen_rtx_SUBREG (V4SFmode, operands[0], 0);
+  if (operands_match_p (operands[0], operands[2]))
+    {
+      rtx tmp;
+      tmp = operands[1];
+      operands[1] = operands[2];
+      operands[2] = tmp;
+    }
 })
 
 ;; Keep 'f' and 'r' in separate alternatives to avoid reload problems
@@ -10224,37 +10214,25 @@
 
 (define_split
   [(set (match_operand:DF 0 "register_operand" "")
-	(abs:DF (match_dup:DF 0)))
-   (use (match_operand:V2DF 1 "nonimmediate_operand" ""))
+	(abs:DF (match_operand:DF 1 "nonimmediate_operand" "")))
+   (use (match_operand:V2DF 2 "nonimmediate_operand" ""))
    (clobber (reg:CC 17))]
   "reload_completed && SSE_REG_P (operands[0])"
   [(set (subreg:TI (match_dup 0) 0)
-	(and:TI (subreg:TI (match_dup 0) 0)
-		(subreg:TI (match_dup 1) 0)))]
+	(and:TI (subreg:TI (match_dup 1) 0)
+		(subreg:TI (match_dup 2) 0)))]
 {
   operands[0] = simplify_gen_subreg (V2DFmode, operands[0], DFmode, 0);
   /* Avoid possible reformating on the operands.  */
   if (TARGET_SSE_PARTIAL_REGS && !optimize_size)
     emit_insn (gen_sse2_unpcklpd (operands[0], operands[0], operands[0]));
-})
-
-(define_split
-  [(set (match_operand:DF 0 "register_operand" "")
-	(abs:DF (match_operand:DF 1 "register_operand" "")))
-   (use (match_operand:V2DF 2 "register_operand" ""))
-   (clobber (reg:CC 17))]
-  "reload_completed && SSE_REG_P (operands[0])"
-  [(set (subreg:TI (match_dup 0) 0)
-	(and:TI (subreg:TI (match_dup 0) 0)
-		(subreg:TI (match_dup 1) 0)))]
-{
-  operands[0] = simplify_gen_subreg (V2DFmode, operands[0], DFmode, 0);
-  /* Operand2 should match operand0, as the opposite case is handled above.  */
-  if (REGNO (operands[2]) != REGNO (operands[0]))
-    abort ();
-  /* Avoid possible reformating on the operands.  */
-  if (TARGET_SSE_PARTIAL_REGS && !optimize_size)
-    emit_insn (gen_sse2_unpcklpd (operands[0], operands[0], operands[0]));
+  if (operands_match_p (operands[0], operands[2]))
+    {
+      rtx tmp;
+      tmp = operands[1];
+      operands[1] = operands[2];
+      operands[2] = tmp;
+    }
 })
 
 
@@ -18902,9 +18880,9 @@
   [(set_attr "type" "ssecvt")
    (set_attr "mode" "V4SF")])
 
-(define_insn "sse_loadss"
-  [(match_operand:V4SF 0 "register_operand" "=x")
-   (match_operand:SF 1 "memory_operand" "m")]
+(define_expand "sse_loadss"
+  [(match_operand:V4SF 0 "register_operand" "")
+   (match_operand:SF 1 "memory_operand" "")]
   "TARGET_SSE"
 {
   emit_insn (gen_sse_loadss_1 (operands[0], operands[1],
@@ -22334,9 +22312,9 @@
   [(set_attr "type" "ssecvt")
    (set_attr "mode" "V2DF")])
 
-(define_insn "sse2_loadsd"
-  [(match_operand:V2DF 0 "register_operand" "=x")
-   (match_operand:DF 1 "memory_operand" "m")]
+(define_expand "sse2_loadsd"
+  [(match_operand:V2DF 0 "register_operand" "")
+   (match_operand:DF 1 "memory_operand" "")]
   "TARGET_SSE2"
 {
   emit_insn (gen_sse2_loadsd_1 (operands[0], operands[1],
