* i386.md (sse_movdfcc, sse_movsfcc): Avoid overactive matching. 	* i386.c (ix86_expand_fp_movcc): Match the reversed cases.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58905 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+Thu Nov  7 21:54:22 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (sse_movdfcc, sse_movsfcc): Avoid overactive matching.
+	* i386.c (ix86_expand_fp_movcc): Match the reversed cases.
+
 2002-11-06  Douglas B Rupp  <rupp@gnat.com>
 
 	* config/i386/i386-interix.h (TARGET_SUBTARGET_DEFAULT): Or
