--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -16887,6 +16887,12 @@
    (clobber (reg:CC 17))]
   "TARGET_SSE
    && (GET_CODE (operands[2]) != MEM || GET_CODE (operands[3]) != MEM)
+   /* Avoid combine from being smart and converting min/max
+      instruction patterns into conditional moves.  */
+   && ((GET_CODE (operands[1]) != LT && GET_CODE (operands[1]) != GT
+	&& GET_CODE (operands[1]) != UNLE && GET_CODE (operands[1]) != UNGE)
+       || !rtx_equal_p (operands[4], operands[2])
+       || !rtx_equal_p (operands[5], operands[5]))
    && (!TARGET_IEEE_FP
        || (GET_CODE (operands[1]) != EQ && GET_CODE (operands[1]) != NE))"
   "#")
@@ -16914,6 +16920,12 @@
    (clobber (reg:CC 17))]
   "TARGET_SSE2
    && (GET_CODE (operands[2]) != MEM || GET_CODE (operands[3]) != MEM)
+   /* Avoid combine from being smart and converting min/max
+      instruction patterns into conditional moves.  */
+   && ((GET_CODE (operands[1]) != LT && GET_CODE (operands[1]) != GT
+	&& GET_CODE (operands[1]) != UNLE && GET_CODE (operands[1]) != UNGE)
+       || !rtx_equal_p (operands[4], operands[2])
+       || !rtx_equal_p (operands[5], operands[5]))
    && (!TARGET_IEEE_FP
        || (GET_CODE (operands[1]) != EQ && GET_CODE (operands[1]) != NE))"
   "#")
