--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov  8 11:36:11 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.md (sse_movdfcc, sse_movsfcc): Fix typo in previous patch.
+
 Thu Nov  7 21:54:22 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* i386.md (sse_movdfcc, sse_movsfcc): Avoid overactive matching.
