* i386.c (x86_machine_dependent_reorg): Fix handling of empty functions.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58923 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Fri Nov  8 13:25:41 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* i386.c (x86_machine_dependent_reorg): Fix handling of empty functions.
+
 Fri Nov  8 13:01:42 CET 2002  Jan Hubicka  <jh@suse.cz>
 
 	* builtins.c (expand_builtin_mathfn): Handle floor/ceil/trunc/round/nearbyint
