--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+Fri Nov  8 13:13:53 CET 2002  Jan Hubicka  <jh@suse.cz>
+
+	* gcc.dg/i386-ssefp-1.c: New test.
+	* gcc.dg/i386-ssefp-1.c: New test.
+
 2002-11-04  Adam Nemet  <anemet@lnxw.com>
 
 	* gcc.c-torture/execute/941014-1.x: thumb-elf was deprecated, use
