--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -18899,6 +18899,7 @@
 {
   emit_insn (gen_sse_loadss_1 (operands[0], operands[1],
 			       CONST0_RTX (V4SFmode)));
+  DONE;
 })
 
 (define_insn "sse_loadss_1"
@@ -22331,6 +22332,7 @@
 {
   emit_insn (gen_sse2_loadsd_1 (operands[0], operands[1],
 			        CONST0_RTX (V2DFmode)));
+  DONE;
 })
 
 (define_insn "sse2_loadsd_1"
