* Makefile.in (profile.o): Add hashtab.h, cfgloop.h and params.h 	dependency. 	(cfgloop.o): Add flags.h dependency. 	(loop-init.o): Add profile.h dependency. 	* basic_block.h (struct edge_def): Add loop_histogram field. 	(dfs_enumerate_from): Moved from cfgloop.h. 	* cfg.c (dump_edge_info): Dump info about histograms. 	* cfgcleanup.c (try_simplify_condjump, try_forward_edges, merge_blocks): 	Keep histograms alive. 	* cfglayout.c (cleanup_unconditional_jumps, cfg_layout_duplicate_bb): 	Keep histograms alive. 	* cfgloop.c: Include flags.h 	(flow_loop_dump): Dump histograms. 	(flow_loop_free): Free histogram. 	(redirect_edge_with_latch_update, make_forwarder_block): Keep histograms 	alive. 	(flow_loops_find): Modified. 	(verify_loop_structure): Removed argument flags (use loops->state instead). 	Verify loop histograms. 	(move_histograms_to_loops, copy_histogram, add_histogram, free_histogram): 	New functions. 	(loop_latch_edge, loop_preheader_edge): Declare parameter as const. 	* cfgloop.h (struct loop): Add histogram field. 	(struct loop_histogram): New. 	(LOOPS_HAVE_PREHEADERS, LOOPS_HAVE_SIMPLE_LATCHES, 	LOOPS_HAVE_MARKED_IRREDUCIBLE_REGIONS, LOOPS_HAVE_HISTOGRAMS_ON_EDGES): 	New flags for loops->state. 	(struct loops): Add state field. 	(VLS_EXPECT_PREHEADERS, VLS_EXPECT_SIMPLE_LATCHES, 	VLS_EXPECT_MARKED_IRREDUCIBLE_LOOPS, VLS_FOR_LOOP): Removed. 	(dfs_enumerate_from): Declaration moved to basic_block.h. 	(loop_preheader_edge, loop_latch_edge, verify_loop_structure): Declaration 	changed. 	(move_histograms_to_loops, loop_histogram, add_histogram, free_histogram): 	Declare. 	(DLTHE_PROB_UPDATING, DLTHE_USE_HISTOGRAM_PROB, DLTHE_USE_WONT_EXIT): 	New flags. 	(DLTHE_FLAG_ALL): Removed. 	* cfgloopanal.c (mark_irreducible_loops): Set loops->state. 	* cfgloopmanip.c (duplicate_loop, duplicate_subloops, copy_loops_to): 	Update histograms. 	(scale_loop_histograms): New. 	(duplicate_loop_to_header_edge): Use histograms for updating counts. 	(create_preheader): Update loop i

--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -265,7 +265,7 @@ in the following sections.
 -falign-functions=@var{n}  -falign-jumps=@var{n} @gol
 -falign-labels=@var{n}  -falign-loops=@var{n}  @gol
 -fbounds-check @gol
--fbranch-probabilities  -fcaller-saves -fcprop-registers @gol
+-fbranch-probabilities -floop-histograms -fcaller-saves -fcprop-registers @gol
 -fcse-follow-jumps  -fcse-skip-blocks  -fdata-sections @gol
 -fdelayed-branch  -fdelete-null-pointer-checks @gol
 -fexpensive-optimizations  -ffast-math  -ffloat-store @gol
@@ -2989,7 +2989,9 @@ generate the arc profile information by running the program on a
 selected workload, and then compile the program again with the same
 optimization and code generation options plus
 @option{-fbranch-probabilities} (@pxref{Optimize Options,,Options that
-Control Optimization}).
+Control Optimization}). You may also add @option{-floop-histograms}
+to both of the compilations to measure histograms of iterations of
+loops. This information is useful for loop optimizer.
 
 The other use of @option{-fprofile-arcs} is for use with @code{gcov},
 when it is used with the @option{-ftest-coverage} option.
@@ -3970,6 +3972,13 @@ These can be used to improve optimization.  Currently, they are only
 used in one place: in @file{reorg.c}, instead of guessing which path a
 branch is mostly to take, the @samp{REG_BR_PROB} values are used to
 exactly determine which path is taken more often.
+
+@item -floop-histograms
+@opindex floop-histograms
+Add this option to @option{-fprofile-arcs} to also add code to measure
+histograms of loop iterations.  By adding it to @option{-fbranch-probabilities}
+you instruct compiler to read back these histograms and use them in loop
+optimizer.
 
 @item -fno-guess-branch-probability
 @opindex fno-guess-branch-probability
